--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<h3>Contact</h3>
 
 		<p>Phone (555)-555-5555<br />
-	E-mail: test@example.com
+	E-mail: test@example.com<br />
 	Twitter: @test
 		</p>	
 	</div>
